--- a/index.html
+++ b/index.html
@@ -8,97 +8,99 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="calcbody">
-        <div class="display">
-            <p>1+2=3</p>
-        </div>
-            <div class="functions">
+    <div class="calc-wrap">
+        <div class="calcbody">
+            <div class="display">
+                <p>0</p>
+            </div>
+                <div class="functions">
+                    <div class="function-button">
+                        <button class="rounded-button">AC</button>
+                    </div>
+
                 <div class="function-button">
-                    <button class="rounded-button">AC</button>
+                    <button class="rounded-button">DEL</button>
                 </div>
 
-            <div class="function-button">
-                <button class="rounded-button">DEL</button>
-            </div>
-
-            <div class="function-button">
-                    <button class="rounded-button">%</button>
-                </div>
-
-            <div class="function-button">
-                <button class="rounded-button orange">/</button>
-            </div>
-        </div>
-
-        <div class="functions-two">
                 <div class="function-button">
-                    <button class="rounded-button grey">7</button>
-                </div>
+                        <button class="rounded-button">%</button>
+                    </div>
 
-            <div class="function-button">
-                <button class="rounded-button grey">8</button>
-            </div>
-
-            <div class="function-button">
-                    <button class="rounded-button grey">9</button>
-                </div>
-
-            <div class="function-button">
-                <button class="rounded-button orange">*</button>
-            </div>
-        </div>
-
-        <div class="functions-three">
                 <div class="function-button">
-                    <button class="rounded-button grey">4</button>
+                    <button class="rounded-button orange">/</button>
                 </div>
-
-            <div class="function-button">
-                <button class="rounded-button grey">5</button>
             </div>
 
-            <div class="function-button">
-                    <button class="rounded-button grey">6</button>
-                </div>
+            <div class="functions-two">
+                    <div class="function-button">
+                        <button class="rounded-button grey" id="seven">7</button>
+                    </div>
 
-            <div class="function-button">
-                <button class="rounded-button orange">-</button>
-            </div>
-        </div>
-
-        <div class="functions-four">
                 <div class="function-button">
-                    <button class="rounded-button grey">1</button>
+                    <button class="rounded-button grey">8</button>
                 </div>
 
-            <div class="function-button">
-                <button class="rounded-button grey">2</button>
-            </div>
-
-            <div class="function-button">
-                    <button class="rounded-button grey">3</button>
-                </div>
-
-            <div class="function-button">
-                <button class="rounded-button orange">+</button>
-            </div>
-        </div>
-
-        <div class="functions-five">
                 <div class="function-button">
-                    <button class="pill-button grey" id="oval">0</button>
-                </div>
+                        <button class="rounded-button grey">9</button>
+                    </div>
 
-            <div class="function-button">
-                <button class="rounded-button grey">.</button>
+                <div class="function-button">
+                    <button class="rounded-button orange">*</button>
+                </div>
             </div>
 
-            <div class="function-button">
-                    <button class="rounded-button orange">=</button>
+            <div class="functions-three">
+                    <div class="function-button">
+                        <button class="rounded-button grey">4</button>
+                    </div>
+
+                <div class="function-button">
+                    <button class="rounded-button grey">5</button>
                 </div>
+
+                <div class="function-button">
+                        <button class="rounded-button grey">6</button>
+                    </div>
+
+                <div class="function-button">
+                    <button class="rounded-button orange">-</button>
+                </div>
+            </div>
+
+            <div class="functions-four">
+                    <div class="function-button">
+                        <button class="rounded-button grey">1</button>
+                    </div>
+
+                <div class="function-button">
+                    <button class="rounded-button grey">2</button>
+                </div>
+
+                <div class="function-button">
+                        <button class="rounded-button grey">3</button>
+                    </div>
+
+                <div class="function-button">
+                    <button class="rounded-button orange">+</button>
+                </div>
+            </div>
+
+            <div class="functions-five">
+                    <div class="function-button">
+                        <button class="pill-button grey" id="oval">0</button>
+                    </div>
+
+                <div class="function-button">
+                    <button class="rounded-button grey">.</button>
+                </div>
+
+                <div class="function-button">
+                        <button class="rounded-button orange">=</button>
+                    </div>
+            </div>
         </div>
-        
     </div>
+    
    
     <script src="script.js"></script>    
 </body>
