Pressing numbers updates on the display

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="calc-wrap">
         <div class="calcbody">
-            <div class="display">
-                <p>0</p>
+            <div class="display" id="display">
+                <p id="number">0</p>
             </div>
                 <div class="functions">
                     <div class="function-button">
