Numbers append on display without the leading 0, Pressing the AC button clears the display

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="calc-wrap">
         <div class="calcbody">
-            <div class="display" id="display">
-                <p id="number">0</p>
+            <div class="display">
+                <p id="display">0</p>
             </div>
                 <div class="functions">
                     <div class="function-button">
-                        <button class="rounded-button">AC</button>
+                        <button class="rounded-button" id="clear-button">AC</button>
                     </div>
 
                 <div class="function-button">
