--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="calc-wrap">
         <div class="calcbody">
-            <div class="display">
-                <p id="display">0</p>
+            <div class="display_container">
+                <input class="display" id="display" readonly>
             </div>
                 <div class="functions">
                     <div class="function-button">
-                        <button class="rounded-button" id="clear-button">AC</button>
+                        <button onclick="pressACClear()" class="rounded-button" id="clear-button">AC</button>
                     </div>
 
                 <div class="function-button">
@@ -27,75 +27,75 @@
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button orange">/</button>
+                    <button onclick="addToDisplay('/')" class="rounded-button orange">/</button>
                 </div>
             </div>
 
             <div class="functions-two">
                     <div class="function-button">
-                        <button class="rounded-button grey" id="seven">7</button>
+                        <button onclick="addToDisplay('7')" class="rounded-button grey" id="seven">7</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button grey">8</button>
+                    <button onclick="addToDisplay('8')" class="rounded-button grey">8</button>
                 </div>
 
                 <div class="function-button">
-                        <button class="rounded-button grey">9</button>
+                        <button onclick="addToDisplay('9')" class="rounded-button grey">9</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button orange">*</button>
+                    <button onclick="addToDisplay('X')" class="rounded-button orange">X</button>
                 </div>
             </div>
 
             <div class="functions-three">
                     <div class="function-button">
-                        <button class="rounded-button grey">4</button>
+                        <button onclick="addToDisplay('4')" class="rounded-button grey">4</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button grey">5</button>
+                    <button onclick="addToDisplay('5')" class="rounded-button grey">5</button>
                 </div>
 
                 <div class="function-button">
-                        <button class="rounded-button grey">6</button>
+                        <button onclick="addToDisplay('6')" class="rounded-button grey">6</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button orange">-</button>
+                    <button onclick="addToDisplay('-')" class="rounded-button orange">-</button>
                 </div>
             </div>
 
             <div class="functions-four">
                     <div class="function-button">
-                        <button class="rounded-button grey">1</button>
+                        <button onclick="addToDisplay('1')" class="rounded-button grey">1</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button grey">2</button>
+                    <button onclick="addToDisplay('2')" class="rounded-button grey">2</button>
                 </div>
 
                 <div class="function-button">
-                        <button class="rounded-button grey">3</button>
+                        <button onclick="addToDisplay('3')" class="rounded-button grey">3</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button orange">+</button>
+                    <button onclick="addToDisplay('+')" class="rounded-button orange">+</button>
                 </div>
             </div>
 
             <div class="functions-five">
                     <div class="function-button">
-                        <button class="pill-button grey" id="oval">0</button>
+                        <button onclick="addToDisplay('0')" class="pill-button grey" id="oval">0</button>
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button grey">.</button>
+                    <button onclick="addToDisplay('.')" class="rounded-button grey">.</button>
                 </div>
 
                 <div class="function-button">
-                        <button class="rounded-button orange">=</button>
+                        <button class="rounded-button orange" id="equals-button">=</button>
                     </div>
             </div>
         </div>
