Added funtionality to the DEL button, Adjusted font size of buttons, adjusted color id display, created a calculate function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </div>
 
                 <div class="function-button">
-                    <button class="rounded-button">DEL</button>
+                    <button onclick="DEL()" class="rounded-button">DEL</button>
                 </div>
 
                 <div class="function-button">
@@ -45,7 +45,7 @@
                     </div>
 
                 <div class="function-button">
-                    <button onclick="addToDisplay('X')" class="rounded-button orange">X</button>
+                    <button onclick="addToDisplay('*')" class="rounded-button orange">*</button>
                 </div>
             </div>
 
@@ -95,8 +95,8 @@
                 </div>
 
                 <div class="function-button">
-                        <button class="rounded-button orange" id="equals-button">=</button>
-                    </div>
+                        <button onclick="calculate()" class="rounded-button orange" id="equals-button">=</button>
+                </div>
             </div>
         </div>
     </div>
